# mrbighand

./: .pylintrc  Dockerfile  README.md  main.py  requirements.txt  setup.cfg
mrbighand/: __main__.py  config.py  context.py  core.py  logger.py  main.py  setup.py
mrbighand/core/: __init__.py  core.py  process.py  process_tree_node.py  setup.py
mrbighand/files/import/organizations_v2/: api_schema.json  config.json  get_output_schema.json
mrbighand/files/import/payroll_schedules_uploads_v1/: api_schema.json  config.json  get_output_schema.json
mrbighand/files/output/: organizations_v2.i  payroll_schedules_uploads_v1.i
mrbighand/generators/: __init__.py  behave.py  progress.py  progress_generator.py
mrbighand/generators/marketplace/: __init__.py  marketplace_behave_generator.py  marketplace_progress_generator.py
mrbighand/utils/: __init__.py  functions.py  logger.py  progress4gl.py  tree_manager.py  tree_node.py
src/: __main__.py
