[metadata]
name = Mr. Big Hand
project_urls =
    Code = https://github.com/fabiopicolijr/mrbighand
author = Fábio Picoli
author_email = fabiopicolijr@gmail.com
description = Code generator for stuffs

[flake8]
select = B,C,D,E,F,W,T4,B9,E800
ignore = D100,D107,D200,D202,D205,D400,D401,E203,E266,E501,W503,F403,F401,ANN
per-file-ignores =
    */steps/*.py: D103 F811
max-line-length = 120
exclude = src static venv
docstring-convention = pep257
